<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="16dp">

    <EditText
        android:id="@+id/usernameTextID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="text"
        android:hint="@string/username_text"
        />

    <EditText
        android:id="@+id/passwordTextID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="textPassword"
        android:hint="@string/password_text"/>

    <!-- Bouton de connexion -->
    <Button
        android:id="@+id/connexionBoutonID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        android:text="@string/connect_btn_text"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDivId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_white"
        app:layout_constraintTop_toBottomOf="@id/connexionBoutonID"
        android:layout_marginTop="24dp">
    <!-- Lien s'inscrire -->
    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_text"
        android:textSize="14sp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/red_brown"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/forgotPasswordText"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Lien mot de passe oublie -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_forgot_text"
        android:textSize="14sp"
        android:layout_marginRight="32dp"
        android:textColor="@color/red_brown"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/registerText"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>