<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="16dp">

    <RelativeLayout
        android:id="@+id/backToUserListAddUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        >

        <ImageView
            android:id="@+id/backToUserListAddUserIcon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/backToUserListAddUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/backToUserListAddUserIcon"
            android:layout_alignTop="@id/backToUserListAddUserIcon"
            android:layout_alignBottom="@id/backToUserListAddUserIcon"
            android:gravity="center_vertical"
            android:text="@string/back_to_user_list_text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/grey"/>
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <EditText
        android:id="@+id/usernameRegisterAdminTextID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="text"
        android:hint="@string/username_text"
        />

    <EditText
        android:id="@+id/emailRegisterAdminTextId"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegisterAdminTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="textEmailAddress"
        android:hint="@string/email_text"/>

    <EditText
        android:id="@+id/passwordRegisterAdminTextID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterAdminTextId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="textPassword"
        android:hint="@string/password_text"/>

    <ImageView
        android:id="@+id/registerCheckImageAdminView"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintEnd_toEndOf="@id/passwordRegisterAdminTextID"
        app:layout_constraintTop_toTopOf="@id/passwordRegisterAdminTextID"
        app:layout_constraintBottom_toBottomOf="@id/passwordRegisterAdminTextID"
        android:src="@drawable/ic_transparent"/>

    <EditText
        android:id="@+id/passwordConfirmAdminTextID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterAdminTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:inputType="textPassword"
        android:hint="@string/password_confirm_text" />

    <ImageView
        android:id="@+id/registerConfirmCheckAdminImageView"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintEnd_toEndOf="@id/passwordConfirmAdminTextID"
        app:layout_constraintTop_toTopOf="@id/passwordConfirmAdminTextID"
        app:layout_constraintBottom_toBottomOf="@id/passwordConfirmAdminTextID"
        android:src="@drawable/ic_transparent"/>

    <!-- Bouton de création de compte -->
    <Button
        android:id="@+id/registerButtonAdminID"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmAdminTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        android:text="@string/create_user_text"
        />

    <!-- Lien Login -->
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>